# Upload-Server

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  security.yml
tests/: test_upload.py
upload_server/: __init__.py  __main__.py
upload_server/static/: style.css  upload.js
upload_server/templates/: upload.html
