[project]
name = "upload_server"
version = "1.0"
description = "Send a file securely to Viktor Mac"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
bandit = "^1.9.2"
coverage = "^7.13.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
